can drag and drop files, need to send files to server

--- a/Client/public/index.html
+++ b/Client/public/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="utf-8">
     <title>TypeScript React Template</title>
+    <script src="https://cdn.jsdelivr.net/npm/jdenticon@2.1.0" async></script>
 </head>
 <body>
     <div id="app">
